<resources>
    <string name="app_name">calculator-android</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="calculator">Calculator</string>

    <string name="aboutDescription">Calculator\nBartłomiej Sikora 228843\nAwesome calculator.</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="backspace">Bksp</string>
    <string name="clear">C</string>

    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="signChange">±</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sqrt">sqrt</string>
    <string name="x_2">x^2</string>
    <string name="x_y">x^y</string>

    <string name="openParenthesis">(</string>
    <string name="closedParenthesis">)</string>
    <string name="percent">%</string>

    <string name="default_display">input</string>\
</resources>